--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,14 @@ tag = True
 
 [wheel]
 universal = 1
+
+[flake8]
+ignore = D203
+exclude =
+    cast/migrations,
+    .git,
+    .tox,
+    docs/conf.py,
+    build,
+    dist
+max-line-length = 119
