--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,14 @@
 [tox]
-envlist = py36, py37
+envlist =
+    {py36,py37}-django-22
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/indieweb
-commands = python runtests.py
+commands = coverage run --source cast runtests.py
 deps =
+    django-22: Django>=2.2
     -r{toxinidir}/requirements-test.txt
+basepython =
+    py37: python3.7
+    py36: python3.6
