--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,25 @@
 # Config file for automatic testing at travis-ci.org
 
 language: python
+dist: xenial
 
 python:
-  - "3.5"
-  - "3.4"
-  - "3.3"
-  - "2.7"
+  - "3.6"
+
+env:
+  - TOX_ENV=py36-django-22
+
+matrix:
+  fast_finish: true
 
 before_install:
-  - pip install codecov
+  - sudo apt-get -qq update
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements-test.txt
+install: pip install -r requirements_test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: coverage run --source indieweb runtests.py
+script: tox -e $TOX_ENV
 
 after_success:
-  - codecov
+  - codecov -e TOX_ENV
