renamed test requirements

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ setenv =
 commands = coverage run --source cast runtests.py
 deps =
     django-22: Django>=2.2
-    -r{toxinidir}/requirements-test.txt
+    -r{toxinidir}/requirements_test.txt
 basepython =
     py37: python3.7
     py36: python3.6
