--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,15 @@
 [tox]
-envlist =
-    {py36,py37}-django-22
+envlist = py39,py310,py311
+isolated_build = True
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/indieweb
-commands = coverage run --source cast runtests.py
 deps =
-    django-22: Django>=2.2
-    -r{toxinidir}/requirements_test.txt
-basepython =
-    py37: python3.7
-    py36: python3.6
+    flit
+setenv = DJANGO_SETTINGS_MODULE=tests.settings
+commands =
+    flit install -s
+    pytest
+
+[testenv:pre-commit]
+deps = pre-commit
+commands = pre-commit run --all-files
