some updates for Python 3.12, tox, pre-commit...

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "django-model-utils",
     "django-braces",
     "pytz",
+    "setuptools",
 ]
 
 [project.optional-dependencies]
