--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,13 @@
 [tox]
-envlist = py310,py311,py312
+envlist = py310,py311,py312,py313
 isolated_build = True
 
 [testenv]
-deps =
-    flit
+allowlist_externals = uv
 setenv = DJANGO_SETTINGS_MODULE=tests.settings
 commands =
-    flit install -s
-    pytest
+    uv sync
+    uv run pytest
 
 [testenv:pre-commit]
 deps = pre-commit
