--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -8,38 +8,25 @@ repos:
       - id: check-added-large-files
       - id: check-toml
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
+    rev: v3.20.0
     hooks:
       - id: pyupgrade
         args: [--py310-plus]
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.15.0
+    rev: 1.25.0
     hooks:
       - id: django-upgrade
         args: [--target-version, "4.1"]
-  - repo: https://github.com/psf/black
-    # black config is in pyproject.toml
-    rev: 23.11.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.11.13
     hooks:
-      - id: black
-        language_version: python3.11
-        exclude: ^docs
-  - repo: https://github.com/timothycrosley/isort
-    # isort config in pyproject.toml does not work FIXME
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        language_version: python3
-        args: [--profile=black, --line-length=120]
-  - repo: https://github.com/PyCQA/flake8
-    # flake8 config is in .flake8
-    rev: 6.1.0
-    hooks:
-      - id: flake8
-        language_version: python3
-        exclude: ^docs
+      # Run the linter.
+      - id: ruff
+      # Run the formatter.
+      - id: ruff-format
   - repo: https://github.com/rtts/djhtml
-    rev: "3.0.6"  # replace with the latest tag on GitHub
+    rev: "3.0.8"  # replace with the latest tag on GitHub
     hooks:
       - id: djhtml
         args: [-t, "2"]
