--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,6 @@ classifiers = [
 
 dependencies = [
     "Django",
-    "django-model-utils",
-    "django-braces",
-    "pytz",
-    "setuptools",
 ]
 
 [dependency-groups]
@@ -56,7 +52,6 @@ dev = [
     "ruff",
     "requests",
     "tox",
-    "types-pytz",
     "types-requests",
 ]
 
@@ -144,15 +139,15 @@ files = ["src/indieweb"]
 plugins = ["mypy_django_plugin.main"]
 
 [[tool.mypy.overrides]]
-module = "braces.views._access"
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
 module = "environ"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "tests.*"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "*.migrations.*"
 ignore_errors = true
 
 [tool.django-stubs]
