#10 feat: implement Micropub content creation with pluggable handler system
  - Add MicropubContentHandler interface for custom content storage
  - Support both form-encoded and JSON requests
  - Implement query endpoints (?q=config, ?q=syndicate-to)
  - Add comprehensive tests and documentation
  - BREAKING: Remove unused MicropubView property methods

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,6 +148,10 @@ module = "tests.*"
 ignore_errors = true
 
 [[tool.mypy.overrides]]
+module = "indieweb.handlers_example"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
 module = "*.migrations.*"
 ignore_errors = true
 
