Complete Webmention implementation with processing, sending, and templates
- Implement WebmentionProcessor with microformats2 parsing using mf2py
- Add WebmentionSender for discovering and sending webmentions
- Create template tags for displaying webmentions with microformats2 markup
- Add management command for sending webmentions from CLI
- Implement spam checking and URL resolution via pluggable interfaces
- Add Django signals for webmention events
- Create templates for different webmention types (like, reply, repost, mention)
- Add comprehensive CSS styling with responsive design and dark mode
- Update documentation with complete Webmention setup guide
- Add 51 new tests for all components
- Update README and docs to reflect new Webmention features
- Add dependencies: mf2py, beautifulsoup4, requests
- Fix all mypy type checking issues
- All tests pass (148 total) with 100% coverage for new code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ classifiers = [
 dependencies = [
     "Django",
     "django-model-utils",
+    "mf2py",
+    "beautifulsoup4",
+    "requests",
 ]
 
 [dependency-groups]
@@ -141,6 +144,10 @@ plugins = ["mypy_django_plugin.main"]
 
 [[tool.mypy.overrides]]
 module = "environ"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "mf2py"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
