Replace requests library with httpx
- Update pyproject.toml to use httpx instead of requests
- Migrate WebmentionSender to use httpx.Client context manager
- Update WebmentionProcessor to use httpx for fetching sources
- Fix all test mocks to work with httpx's context manager pattern
- Update exception handling for httpx.RequestError

This change provides better async support and modern HTTP/2 features.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "django-model-utils",
     "mf2py",
     "beautifulsoup4",
-    "requests",
+    "httpx",
 ]
 
 [dependency-groups]
