#14 Bump version to 0.5.1 for h-card fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "django-indieweb"
 authors = [
     {name = "Jochen Wersdörfer", email = "jochen-indieweb@wersdoerfer.de"},
 ]
-version = "0.4.3"
+version = "0.5.1"
 description = "includes indieauth, micropub, and webmention endpoints"
 requires-python = ">=3.10"
 keywords = [
@@ -58,6 +58,7 @@ dev = [
     "requests",
     "tox",
     "types-requests",
+    "sphinxcontrib-mermaid>=1.0.0",
 ]
 
 [project.urls]
